02-K8s/15-Ingress-App/04-Python-app-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /python(/|$)(.*)
        backend:
          service:
            name: python-webapp-svc
            port:
              number: 31007
---
